--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,12 @@ html,
 body {
    padding: 0;
    margin: 0;
+   color: #ffffff;
+   background: linear-gradient(
+      360deg,
+      rgba(2, 0, 36, 1) 0%,
+      rgba(48, 30, 60, 1) 0%
+   );
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    line-height: 1.6;
